--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MoMo_Assignment</string>
+    <string name="internet_not_connected">您尚未連接 Internet</string>
+    <string name="unexpected_error">"意料之外的錯誤"</string>
 </resources>
