--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">MoMo_Assignment</string>
     <string name="internet_not_connected">您尚未連接 Internet</string>
-    <string name="unexpected_error">"意料之外的錯誤"</string>
+    <string name="unexpected_error">意料之外的錯誤</string>
+    <string name="no_rest_day_info">無休館資訊</string>
 </resources>
