--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="unexpected_error">意料之外的錯誤</string>
     <string name="no_rest_day_info">無休館資訊</string>
     <string name="animal_title">動物資料</string>
+    <string name="toolbar_title">台北市立動物園</string>
 </resources>
